Fix IntelliJ warnings in IcebergPageSourceProvider
(cherry picked from commit c017233fed35d09b515cad236963e2529382c558)
(cherry picked from commit 45790852ebc98941ae1c73a00dba89cd4cb076b9)